# ByteSet

./: CMakeLists.txt  EIP1559.json  LICENSE  jsonfile.json
Ethereum_Blocks/: EL_block_versions.txt  trie.txt
app/: CMakeLists.txt  main.cpp
cmake/: curl.cmake  doxygen.cmake  ethash.cmake  givaro.cmake  gmp.cmake  googletest.cmake  nlohmannjson.cmake  openssl.cmake
include/ByteSet/: ByteSet.h  ByteSet.tpp  ByteSetComposite.h  ByteSetComposite.tpp  ByteSetFormat.h  ByteSetMPT.h  ByteSetTrie.h  ByteSetTrie.tpp  Composite.h  Composite.tpp  IComponent.h  IComposite.h  RLPByteSet.h  RLPByteSet.tpp  Tools.h  TrieNode.h  TrieNode.tpp  VectorNode.h
src/: ByteSetTrie.cpp  CMakeLists.txt  IComponent.cpp  IComposite.cpp  Tools.cpp  VectorNode.cpp  main.cpp
src/data/: ByteSet.h  ByteSet.tpp  ByteSetComposite.cpp  ByteSetComposite.h  ByteSetComposite.tpp  ByteSetFormat.h  CMakeLists.txt  CompositeParsingStrategy.cpp  CompositeParsingStrategy.h  EthComposite.cpp  EthComposite.h  EthComposite.tpp  System.h  Tools.h  trie.cpp  trie.h  tryout.cpp  tryout.h
tests/: CMakeLists.txt
tests/unit_tests/: ByteSetTrie.cpp  RLPserialize.cpp  Test_ByteSetTrie.cpp  Test_RLPserialize.cpp  Test_TrieNode.cpp  hashing.cpp
tests/unit_tests/constructors/: Constructors_parameters.h  Test_int_Constructors.cpp  Test_str_Constructors.cpp  int_Constructors.cpp  ptr_Constructors.cpp  str_Constructors.cpp
